24/06/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.2 'dan Eider':
	- fix null pointer dereference in case of out of memory. (thanks to Thomas Moeller for the report)
    - merge PR #517 (by wolmi)
		* add prometheus metrics
	- merge PR #637 (by David Florness)
	    * Delete trailing whitespace in example configuration files
	- merge PR #631 (by Debabrata Deka)
	    * Add architecture ppc64le to travis build
	- merge PR #627 (by Samuel)
		* Fix misleading option in doc (prometheus)
	- merge PR #643 (by tupelo-schneck)
		* Allow RFC6062 TCP relay data to look like TLS
	- merge PR #655 (by plinss)
		* Add support for proxy protocol V1 
	- merge PR #618 (by Paul Wayper)
		* Print full date and time in logs
		* Add new options: "new-log-timestamp" and "new-log-timestamp-format"
	- merge PR #599 (by Cédric Krier)
		* Do not use FIPS and remove hardcode OPENSSL_VERSION_NUMBER with LibreSSL
	- update Docker mongoDB and fix with workaround the missing systemctl
	- merge PR #660 (by Camden Narzt)
		* fix compilation on macOS Big Sur

24/06/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.3 'dan Eider':
	- merge PR #575: (by osterik)
		* fix rpm packaging
	- merge PR #576: (by osterik)
		* tell tar to not include the metadata into release
	- merge PR #574: (by DevRockstarZ)
		* change Docker turnserver.conf to latest turnserver.conf
	- merge PR #566: (by bpcurse)
		* Remove reference to SSLv3
	- merge PR #579: (by islamoglus)
		*Ignore MD5 for BoringSSL
	- merge PR #577: (by osterik)
		*build RPM from local folder instead of git repo
	- Fix for CVE-2020-4067
		* STUN response buffer not initialized properly
		* The issue found and reported #583 by Felix Dörre all credits belongs to him.

30/04/2020 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.2 'dan Eider':
	- merge regression fix: (by Mathieu Brunot)